--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ email: filenphotos.insta@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Filenphotos, créations autour du fil et de la photo !
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "compagniepygmalion.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+url: "filenphotos.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 logo: "/images/logo.jpg"
 twitter_username: jekyllrb
 github_username:  jekyll
